# dots-wallpaper

./: .gitignore  .release-plz.toml  Cargo.toml  LICENSE  README.md  cliff.toml  flake.nix  nixos-module.nix
.github/workflows/: changelog.yml  release.yml
src/: main.rs
